[package]
name = "osshkeys"
description = "A library to read and write OpenSSH public and private keys"
version = "0.5.2"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2021"
rust-version = "1.56.0"
keywords = ["ssh", "ssh-keys", "keys", "openssh"]
repository = "https://github.com/Leo1003/rust-osshkeys"
license = "MIT"
readme = "README.md"
exclude = [".gitignore"]

[features]
default = ["openssl-cipher"]

# Encrypt/Decrypt by OpenSSL
# Currently, there are other parts which still depend on OpenSSL,
# therefore, unset this feature won't remove the OpenSSL dependency.
openssl-cipher = []

rustcrypto-cipher = ["cbc", "ctr", "aes", "des", "cipher"]

openssl-vendored = ["openssl/vendored"]

[dependencies]
base64 = "0.13.0"
byteorder = "1.4.3"
openssl = "0.10.30"
# Upgrade to 0.8.x is blocked by ed25519-dalek
rand = "0.7.2"
ed25519-dalek = "1.0.0"
zeroize = "1.1.0"
log = "0.4.8"
backtrace = "0.3.46"
nom_pem = "4.0.0"
digest = "0.10.2"
md-5 = "0.10.0"
sha-1 = "0.10.0"
sha2 = "0.10.1"
bcrypt-pbkdf = "0.7.1"
cryptovec = "0.6.1"

# Feature `rustcrypto-cipher` dependencies
cipher = { version = "0.4.0", features = ["std", "block-padding", "zeroize"], optional = true }
cbc = { version = "0.1.0", features = ["zeroize"], optional = true }
ctr = { version = "0.9.0", features = ["zeroize"], optional = true }
aes = { version = "0.8.0", optional = true }
des = { version = "0.8.0", optional = true }

[dev-dependencies]
hex = "0.4.0"
hex-literal = "0.3.1"
cfg-if = "1.0.0"
