[package]
name = "osshkeys"
description = "A library to read and write OpenSSH public and private keys"
version = "0.7.0"
authors = ["Leo <leo881003@gmail.com>"]
edition = "2021"
rust-version = "1.63.0"
keywords = ["ssh", "ssh-keys", "keys", "openssh"]
repository = "https://github.com/Leo1003/rust-osshkeys"
license = "MIT"
readme = "README.md"
exclude = [".gitignore"]

[features]
default = ["openssl-cipher"]

# Encrypt/Decrypt by OpenSSL
# Currently, there are other parts which still depend on OpenSSL,
# therefore, unset this feature won't remove the OpenSSL dependency.
openssl-cipher = []

rustcrypto-cipher = ["cbc", "ctr", "aes", "des", "cipher"]

openssl-vendored = ["openssl/vendored"]

# Internal use for experimental codes
experimental = []

[dependencies]
base64 = "0.21.0"
byteorder = "1.4.3"
openssl = "0.10.30"
rand = "0.8.5"
ed25519-dalek = { version = "2.0.0-rc.2", features = ["rand_core"] }
zeroize = "1.1.0"
log = "0.4.8"
backtrace = "0.3.46"
pem = "2.0.1"
regex = "1.8.3"
digest = "0.10.2"
md-5 = "0.10.0"
sha-1 = "0.10.0"
sha2 = "0.10.1"
bcrypt-pbkdf = "0.10.0"
cryptovec = "0.6.1"

# Feature `rustcrypto-cipher` dependencies
cipher = { version = "0.4.0", features = ["std", "block-padding", "zeroize"], optional = true }
cbc = { version = "0.1.0", features = ["zeroize"], optional = true }
ctr = { version = "0.9.0", features = ["zeroize"], optional = true }
aes = { version = "0.8.0", optional = true }
des = { version = "0.8.0", optional = true }

[dev-dependencies]
hex = "0.4.0"
hex-literal = "0.4.1"
cfg-if = "1.0.0"
